--- a/finalproject2.html
+++ b/finalproject2.html
@@ -18,7 +18,7 @@
     
         <center><h2>Betting have many type , that is:   </h2></center>
     
-        <center><img src="images.jfif" width="500px" height="500px"></center>
+        <center><img src="Sports-Betting.jpg" width="700px" height="500px"></center>
     <div id="box">
         <p>1.Sport Betting </p></div>
            <p> is the activity of predicting sports results and placing a wager on the outcome.The frequency of sports bet upon varies by culture,with the vast majority of bets being placed on association football,American football,    basketball,baseball,hockey,track cycling,auto racing,mixed martial arts,and boxing at both the amateur and professional levels.Sports betting can also extend to non-athletic events,such as reality show contests and political elections,and non-human contests such as horse racing, greyhound racing,and illegal,underground cockfighting.It is not uncommon for sports betting websites to offer wagers for entertainment events such as the Grammy Awards,the Oscars,and the Emmy Awards.
